Fix not showing remove photo sign

--- a/app/assets/stylesheets/profile_page.scss
+++ b/app/assets/stylesheets/profile_page.scss
@@ -205,7 +205,7 @@
 		position: relative;
 
 		&:hover {
-			.establishment-photos-remove {
+			.photos-remove {
 				display: inline;
 			}
 		}
